addons/knowledge/static/src/scss/knowledge_views.scss
.o_knowledge_form_view {
    --default-sidebar-size: 300px;
    --sidebar-size: clamp(300px, var(--default-sidebar-size), 50vw);

    $o-knowledge-bg--active: #cceaf9; // TMP -> should match $o-searchpanel-active-bg


    // = Navbar
    // --------------------------------------------------------------------------
    .o_breadcrumb_article_name:not(:focus) {
        --o-input-border-color: transparent;
    }
    .o_breadcrumb_article_name:not(.o_readonly_modifier):hover {
        border-bottom: $input-border-width solid $o-brand-primary;
    }

    .o_toggle_favorite {
        font-size: 16px;
        &.fa-star, &:hover {
            color: $o-main-favorite-color;
        }
    }

    .o_knowledge_add_icon, .o_knowledge_add_cover {
        visibility: hidden;
        opacity: 0;
        transition: visibility 0.4s, opacity 0.4s linear;
    }
    .o_knowledge_body:hover .o_knowledge_add_icon, .o_knowledge_body:hover .o_knowledge_add_cover {
        visibility: visible;
        opacity: 1;
    }
    .o_knowledge_article_view_form_dynamic_width.o_invisible_modifier ~ .o_knowledge_icon,
    .o_knowledge_article_view_form_dynamic_width.o_invisible_modifier ~ .o_knowledge_icon_cover_buttons,
    .o_knowledge_article_view_form_dynamic_width.o_invisible_modifier ~ .o_knowledge_editor .oe_form_field .note-editable,
    .o_knowledge_article_view_form_dynamic_width.o_invisible_modifier ~ .o_knowledge_editor .oe_form_field .o_readonly {
        width: 100%;
        max-width: 750px;
        margin-left: auto;
        margin-right: auto;
    }

    // = Sidebar
    // --------------------------------------------------------------------------
    .o_section .o_tree {
        min-height: 2rem;
    }

    .o_knowledge_aside {
        width: var(--sidebar-size);
        transition: width 0.15s linear;

        .o_article_active, .o_article_emoji_active {
            background-color: $o-knowledge-bg--active;
        }

        .o_article_emoji:hover {
            background-color: rgba(#000, .1);
        }

        ul {
            list-style: none;
            padding: 0;
        }
        li {
            padding: 0.2em 0;
            position: relative;
        }
        li > ul > li:not(.ui-sortable-helper) {
            margin-left: 1.28571429em * 0.5; // Workaround to get half .fa-fw icon's width.
            padding-left: 0.8em;

            &:before, &:after {
                content: '';
                background-color: $border-color;
            }

            &:before {
                @include o-position-absolute($top: 1em, $left: 0);
                width: .6em;
                height: 1px;
                margin: auto;
            }

            &:after {
                @include o-position-absolute(0, auto, 0, 0);
                width: 1px;
                height: 100%;
            }

            &:last-child {
                padding-bottom: 0;

                &:after {
                    height: 1em;
                }
            }
        }

        .o_section_header:not(:hover) .o_section_create,
        .o_article_handle:not(:hover) .o_article_create {
            visibility: hidden;
        }
        .o_article_name a {
            color: inherit;
        }
    }

    // = Resizer
    // --------------------------------------------------------------------------
    .o_knowledge_article_form_resizer {
        // Use '$spacers' measures to match surrounding elements padding
        $-resizer-spacing: map-get($spacers, 3);
        $-resizer-line-width: map-get($spacers, 1);

        @include o-position-absolute(0, auto, 0, $-resizer-spacing * -1);
        cursor: ew-resize;
        touch-action: none;

        span {
            @include o-position-absolute(0, auto, 0, $-resizer-spacing + ($-resizer-line-width * -0.5));
        }
    }

    .o_knowledge_body {
        min-height: 100%;
    }

    .o_knowledge_chatter {
        li.nav-item {
            display: none;
        }
        .o_FormRenderer_chatterContainer {
            max-width: unset;
            &.o-aside {
                width: auto;
                padding: 1rem;
                border: none;
            }
        }
    }

    .dropdown-menu.o_article_emoji_dropdown_panel {
        width: 200px;
    }
    .dropdown-menu.o_knowledge_more_options_panel {
        width: 225px;
    }
    .dropdown-menu.o_knowledge_share_panel {
        width: 420px;
        overflow-x: hidden;
        overflow-y: auto;
        .o_m2m_avatar {
            max-width: 30px;
        }
        .o_clipboard_button {
            padding: 0 10px;
        }
    }
}

.o_knowledge_select2 {
    img {
        width: 20px;
        height: 20px;
    }
    .select2-highlighted {
        background: $o-brand-odoo !important;
        color: $o-white;
    }
}

.o_knowledge_article_kanban_view {
    .o_knowledge_kanban_card {
        min-height: 10rem;
    }
}

// Media queries:

@include media-breakpoint-up(lg) {
    .o_knowledge_form_view {
        .o_scroll_view_lg {
            position: absolute;
            top: 0;
            left: 0;
            right: 0;
            bottom: 0;
            overflow-y: auto;
            overflow-x: hidden;
        }
        .o_knowledge_chatter {
            border-left: 1px solid $border-color;
        }
    }
}

@include media-breakpoint-down(lg) {
    .o_knowledge_form_view {
        .o_scroll_view_lg {
            width: 100%;
        }
        .o_knowledge_chatter {
            border-top: 1px solid $border-color;
        }
    }
}

@include media-breakpoint-up(sm) {
    .o_knowledge_form_view {
        .o_scroll_view {
            position: absolute;
            top: 0;
            left: 0;
            right: 0;
            bottom: 0;
            overflow-y: auto;
            overflow-x: hidden;
        }
        .o_knowledge_cover_image {
            width: 100%;
            img {
                width: 100%;
                height: 30vh;
                min-height: 150px;
                object-fit: cover;
                object-position: 50% 50%;
            }
        }
        span.o_invisible_modifier + .o_knowledge_icon {
            margin-top: -70px;
        }
        .o_knowledge_icon {
            &.o_large {
                font-size: 80px;
            }
        }
        .o_knowledge_icon.o_large,
        .o_knowledge_icon_cover_buttons,
        .o_knowledge_editor .oe_form_field .note-editable,
        .o_knowledge_editor .oe_form_field .o_readonly {
            padding-left: 3rem !important; // gutter size of the editor
            padding-right: 3rem !important;
        }
    }
}

@include media-breakpoint-down(sm) {
    .o_knowledge_form_view {
        .o_knowledge_icon,
        .o_knowledge_icon_cover_buttons,
        .o_knowledge_editor .oe_form_field .note-editable,
        .o_knowledge_editor .oe_form_field .o_readonly {
            padding-left: 1rem !important; // gutter size of the editor
            padding-right: 1rem !important;
        }
    }
}

@include media-breakpoint-down(xs) {
    .o_knowledge_form_view {
        .o_knowledge_aside {
            width: 100%;
        }
    }
}

// Knowledge Toolbars

.o_knowledge_toolbar {
    display: flex;
    justify-content: flex-end;
    white-space: nowrap;
    button {
        font-family: $font-family-base !important;
        font-weight: $font-weight-bold;
    }
}

@media screen and (max-width: 1024px) {
    .o_knowledge_toolbar_button_text {
        display: none;
    }
}

